--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,8 @@
 
 -->
 
-<project name="wekaexamples" default="dist" basedir=".">
+<project name="wekaScavenger" default="dist" basedir=".">
+
    <!-- compile options -->
    <property name="build.sysclasspath" value="ignore" />
    <property name="build.compiler"     value="modern" />
